# NLP_project2025

./: .gitignore  README.md  pyproject.toml
BONUS/: masked_text_filler.py  mbert.py  nlpaueb.py  similarity_matrix_generator.py  xlmrob.py
P1/: A.py  B.py  C.py
P1/A/: customText1.py  customText2.py  naive_sentence_reconstructor.py
P1/B/Ateeqq/: ateeqqTXT1.py  ateeqqTXT2.py  ateeqq_transformer.py
P1/B/Sshleifer/: sshleiferTXT1.py  sshleiferTXT2.py  sshleifer_transformer.py
P1/B/Vennify/: vennifyTXT1.py  vennifyTXT2.py  vennify_transformer.py
P1/C/: comp1.py  comp2.py  similarity_matrix_generator.py
P2/: Comp.py  compAnalysis1.py  compAnalysis2.py  comp_analyzer.py
P3/BONUS/: masked_text_filler.py  nlpaueb.py  xlmrob.py
data/: dataa.py
